# meta-projection-stability

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.lock.txt  requirements.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: axiom-guard.yml  axiom_guard.yml  ci.yml  coverage.yml  eval.yml  policy-checks.yml  robustness-gate.yml
artifacts/: step8_smoke.csv  step8_smoke.json
docs/: control_stability_phi_pid.md  data_dictionary.md  evaluation_protocol.md  metrics_catalog.md  non_goals.md  release_checklist.md  robustness_contract.md  safety_case.md  scenario_catalog.md  telemetry_contract.md  threat_model.md  versioning_policy.md
examples/: run_axiom_handshake.py  run_balanced_humanistic.py
goldens/: README.md  adversarial_min.json  baseline.json  schema_v1.json
scenarios/: adversarial_min.json  baseline.json
scripts/: check_biometric_adapter.sh  check_biometric_on_off.sh  eval_report.py  eval_runner.py  protocol_run.py  run_eval_clean.sh  run_robustness.py  update_goldens.py  validate_goldens.py  validate_results.py  validate_robustness.py  validate_robustness_goldens.py
scripts/scripts/: run_robustness.py
src/meta_projection_stability/: __init__.py  adapter.py  adversarial.py  adversarial_sim.py  analytics.py  cli.py  (+24 more)
tests/: run_robustness.py  test_axiom_handshake.py  test_biometric_fusion_adapter.py  test_level0_axiom.py  test_long_horizon_invariants.py  test_manifest_integrity.py  test_phase5_scenarios_types_state.py  test_robustness_metrics.py  test_scenarios_smoke.py
(+9 files in other folders)
