[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meta-projection-stability"
version = "0.1.0"
description = "Meta-Projection Stability Adapter & Simulation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.3",
    "mypy>=1.10",
]
